--- a/HomeHistory.Web/wwwroot/index.htm
+++ b/HomeHistory.Web/wwwroot/index.htm
@@ -72,6 +72,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"></script>
+
     <script src="lib/kendo/js/kendo.all.min.js"></script>
 
     <!-- Popper.JS -->
