--- a/HomeHistory.Web/wwwroot/index.htm
+++ b/HomeHistory.Web/wwwroot/index.htm
@@ -29,6 +29,7 @@
     <!-- JAVASCRIPT INCLUDES -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.min.js" integrity="sha256-hlKLmzaRlE8SCJC1Kw8zoUbU8BxA+8kR3gseuKfMjxA=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js" type="text/javascript"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 
@@ -61,7 +62,11 @@
 
             $.hh.emailAddress = googleUser.getBasicProfile().getEmail();
 
+            $.cookie('email',$.hh.emailAddress);
+            $.cookie('access_token',googleUser.vc.access_token);
+
             console.log(googleUser);
+            console.log(googleUser.vc.access_token);
 
             window.location.href = '/secure.htm';
         }
