--- a/HomeHistory.Web/wwwroot/sandbox/googleLogin.htm
+++ b/HomeHistory.Web/wwwroot/sandbox/googleLogin.htm
@@ -86,7 +86,7 @@
     }
     function renderButton() {
       gapi.signin2.render('my-signin2', {
-        'scope': 'profile email',
+        'scope': 'profile email https://www.googleapis.com/auth/contacts.readonly',
         'width': 240,
         'height': 50,
         'longtitle': true,
