--- a/HomeHistory.Web/wwwroot/secure.htm
+++ b/HomeHistory.Web/wwwroot/secure.htm
@@ -26,6 +26,7 @@
 
     <link rel="stylesheet" href="/css/hh.css" />
     <link rel="stylesheet" href="/css/propertyTable.css" />
+    <link rel="stylesheet" href="/css/propertyDetails.css" />
     <link rel="stylesheet" href="/css/propertyLookup.css" />
 
     <!-- JAVASCRIPT INCLUDES -->
@@ -51,6 +52,7 @@
     <script src="/js/hh.data.js"></script>
     <script src="/js/hh.models.js"></script>
     <script src="/js/hh.propertyTable.js"></script>
+    <script src="/js/hh.propertyDetails.js"></script>
     <script src="/js/hh.propertyLookup.js"></script>
 
     <!-- Custom scripts -->
@@ -68,6 +70,7 @@
         <a href="#" class="list-group-item list-group-item-action py-2 ripple"><i class="fas fa-chart-area fa-fw me-3"></i><span>Reports</span></a>
         <a href="#" class="list-group-item list-group-item-action py-2 ripple"><i class="fas fa-calendar fa-fw me-3"></i><span>Calendar</span></a>
         <a href="#" class="list-group-item list-group-item-action py-2 ripple"><i class="fas fa-users fa-fw me-3"></i><span>Contacts</span></a>
+        <a href="#" class="list-group-item list-group-item-action py-2 ripple"><i class="fas fa-briefcase fa-fw me-3"></i><span>Work Orders</span></a>
       </div>
     </div>
   </nav>
