--- a/HomeHistory.Web/wwwroot/secure.htm
+++ b/HomeHistory.Web/wwwroot/secure.htm
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="/css/hh.css" />
     <link rel="stylesheet" href="/css/propertyTable.css" />
     <link rel="stylesheet" href="/css/propertyDetails.css" />
+    <link rel="stylesheet" href="/css/calendar.css" />
     <link rel="stylesheet" href="/css/propertyLookup.css" />
 
     <!-- JAVASCRIPT INCLUDES -->
@@ -54,6 +55,7 @@
     <script src="/js/hh.propertyTable.js"></script>
     <script src="/js/hh.propertyDetails.js"></script>
     <script src="/js/hh.propertyLookup.js"></script>
+    <script src="/js/hh.calendar.js"></script>
 
     <!-- Custom scripts -->
     <script src="/js/secure.js"></script>
@@ -67,6 +69,7 @@
     <div class="position-sticky">
       <div class="list-group list-group-flush mx-3 mt-4">
         <a href="#" class="list-group-item list-group-item-action py-2 ripple active" aria-current="true"><i class="fas fa-tachometer-alt fa-fw me-3"></i><span>Main dashboard</span></a>
+        <a href="#" class="list-group-item list-group-item-action py-2 ripple" aria-current="true"><i class="fas fa-building fa-fw me-3"></i><span>My Properties</span></a>
         <a href="#" class="list-group-item list-group-item-action py-2 ripple"><i class="fas fa-chart-area fa-fw me-3"></i><span>Reports</span></a>
         <a href="#" class="list-group-item list-group-item-action py-2 ripple"><i class="fas fa-calendar fa-fw me-3"></i><span>Calendar</span></a>
         <a href="#" class="list-group-item list-group-item-action py-2 ripple"><i class="fas fa-users fa-fw me-3"></i><span>Contacts</span></a>
