Fixed the Loqate Service

--- a/HomeHistory.Web/wwwroot/ui/propertyLookup.htm
+++ b/HomeHistory.Web/wwwroot/ui/propertyLookup.htm
@@ -2,7 +2,9 @@
 
 <script type="text/javascript" src="https://services.postcodeanywhere.co.uk/js/address-3.91.js"></script>
 
-<script>(function(n,t,i,r){var u,f;n[i]=n[i]||{},n[i].initial={accountCode:"CMPNY24342",host:"CMPNY24342.pcapredict.com"},n[i].on=n[i].on||function(){(n[i].onq=n[i].onq||[]).push(arguments)},u=t.createElement("script"),u.async=!0,u.src=r,f=t.getElementsByTagName("script")[0],f.parentNode.insertBefore(u,f)})(window,document,"pca","//CMPNY24342.pcapredict.com/js/sensor.js")</script>
+<script>(function(n,t,i,r){var u,f;n[i]=n[i]||{},n[i].initial={accountCode:"HOMET11126",host:"HOMET11126.pcapredict.com"},n[i].on=n[i].on||function(){(n[i].onq=n[i].onq||[]).push(arguments)},u=t.createElement("script"),u.async=!0,u.src=r,f=t.getElementsByTagName("script")[0],f.parentNode.insertBefore(u,f)})(window,document,"pca","//HOMET11126.pcapredict.com/js/sensor.js")</script>
+
+<!-- <script>(function(n,t,i,r){var u,f;n[i]=n[i]||{},n[i].initial={accountCode:"CMPNY24342",host:"CMPNY24342.pcapredict.com"},n[i].on=n[i].on||function(){(n[i].onq=n[i].onq||[]).push(arguments)},u=t.createElement("script"),u.async=!0,u.src=r,f=t.getElementsByTagName("script")[0],f.parentNode.insertBefore(u,f)})(window,document,"pca","//CMPNY24342.pcapredict.com/js/sensor.js")</script> -->
 
 <!-- <script type="text/javascript">
   var control = new pca.Address(fields, options);
@@ -10,7 +12,7 @@
   control.load();
 </script> -->
 
-<div class="hh-property-lookup">
+<div class="hh-property-lookup" style="margin-top:30px;">
     <form>
         <div class="form-group">
           <input type="text" class="form-control" id="line1" aria-describedby="addyHelp" placeholder="Enter address">
