--- a/HomeHistory.Web/wwwroot/ui/propertyTable.htm
+++ b/HomeHistory.Web/wwwroot/ui/propertyTable.htm
@@ -1,5 +1,5 @@
 <div class="hh-property-table">
     <div class="hh-property-grid"></div>
 
-    <button type="button" class="btn btn-primary btn-add-property">Add Property</button>
+    <button type="button" class="btn btn-primary btn-add-property" style="margin-top:14px;">Add Property</button>
 </div>
