--- a/HomeHistory.Web/wwwroot/secure.htm
+++ b/HomeHistory.Web/wwwroot/secure.htm
@@ -243,7 +243,7 @@
 <!--Main layout-->
 <main style="margin-top: 38px">
   <div class="container pt-4">
-    <div id="divMainContent"></div>
+    <div id="divMainContent" style="padding-top:12px;"></div>
 <!-- 
     <div id="addyLookup" style="display:hidden;">
       <form>
