--- a/HomeHistory.Web/wwwroot/ui/reports.htm
+++ b/HomeHistory.Web/wwwroot/ui/reports.htm
@@ -26,7 +26,7 @@
                                                 <i class="fas fa-building fa-fw"></i>
                                             </span>
                                             <span class="ActionList-item-label">
-                                                Overview
+                                                Report A
                                             </span>
                                         </a>
                                     </li>
@@ -38,7 +38,7 @@
                                                 <i class="fas fa-calendar fa-fw"></i>
                                             </span>
                                             <span class="ActionList-item-label">
-                                                Schedule
+                                                Report B
                                             </span>
                                         </a>
                                     </li>
@@ -47,7 +47,7 @@
                             <li class="ActionList-sectionDivider"></li>
                             <li id="nav-list-section-092978e5-594c-497a-ab7e-731494460b65" aria-hidden="true"
                                 data-view-component="true" class="ActionList-sectionDivider">
-                                Tentant Mgmt
+                                Payment
                             </li>
                             <li data-view-component="true" class="ActionList-item ActionList-item--hasSubItem">
                                 <ul aria-label="Code, planning and automation"
@@ -61,7 +61,7 @@
                                                 <i class="fas fa-sign-hanging fa-fw"></i>
                                             </span>
                                             <span class="ActionList-item-label">
-                                                Advertising
+                                                Report C
                                             </span>
                                         </a>
                                     </li>
@@ -73,19 +73,7 @@
                                                 <i class="fas fa-filter-circle-dollar fa-fw"></i>
                                             </span>
                                             <span class="ActionList-item-label">
-                                                Screening
-                                            </span>
-                                        </a>
-                                    </li>
-                                    <li data-item-id="" data-view-component="true"
-                                        class="ActionList-item org-menu-item">
-                                        <a href="#BP" tabindex="0" data-view-component="true"
-                                            class="ActionList-content ActionList-content--visual16">
-                                            <span class="ActionList-item-visual ActionList-item-visual--leading">
-                                                <i class="fas fa-file-invoice-dollar fa-fw"></i>
-                                            </span>
-                                            <span class="ActionList-item-label">
-                                                Rent
+                                                Report D
                                             </span>
                                         </a>
                                     </li>
@@ -94,7 +82,7 @@
                             <li class="ActionList-sectionDivider"></li>
                             <li id="nav-list-section-092978e5-594c-497a-ab7e-731494460b65" aria-hidden="true"
                                 data-view-component="true" class="ActionList-sectionDivider">
-                                Maintenance
+                                End of Year
                             </li>
                             <li data-view-component="true" class="ActionList-item ActionList-item--hasSubItem">
                                 <ul aria-label="Code, planning and automation"
@@ -108,7 +96,7 @@
                                                 <i class="fas fa-ticket fa-fw"></i>
                                             </span>
                                             <span class="ActionList-item-label">
-                                                Work Orders
+                                                Report E
                                             </span>
                                         </a>
                                     </li>
@@ -120,30 +108,7 @@
                                                 <i class="fas fa-receipt fa-fw"></i>
                                             </span>
                                             <span class="ActionList-item-label">
-                                                Receipts
-                                            </span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="ActionList-sectionDivider"></li>
-                            <li id="nav-list-section-092978e5-594c-497a-ab7e-731494460b65" aria-hidden="true"
-                                data-view-component="true" class="ActionList-sectionDivider">
-                                Administration
-                            </li>
-                            <li data-view-component="true" class="ActionList-item ActionList-item--hasSubItem">
-                                <ul aria-label="Code, planning and automation"
-                                    aria-labelledby="nav-list-section-092978e5-594c-497a-ab7e-731494460b65"
-                                    data-view-component="true" class="ActionList ActionList--subGroup">
-                                    <li data-item-id="" data-view-component="true"
-                                        class="ActionList-item org-menu-item">
-                                        <a href="#BP" tabindex="0" data-view-component="true"
-                                            class="ActionList-content ActionList-content--visual16">
-                                            <span class="ActionList-item-visual ActionList-item-visual--leading">
-                                                <i class="fas fa-key fa-fw"></i>
-                                            </span>
-                                            <span class="ActionList-item-label">
-                                                Tenant Portal
+                                                Report F
                                             </span>
                                         </a>
                                     </li>
@@ -156,7 +121,7 @@
             </div>
 
             <div class="col-md-9">
-                PROPERTY INFO HERE
+                REPORT HERE
             </div>
 
         </div>
