--- a/HomeHistory.Web/wwwroot/secure.htm
+++ b/HomeHistory.Web/wwwroot/secure.htm
@@ -13,7 +13,9 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.0/themes/smoothness/jquery-ui.css">
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
+    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" /> -->
+    
+    <script src="https://kit.fontawesome.com/ea84983811.js" crossorigin="anonymous"></script>
     
     <!-- Google Fonts Roboto -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" />
@@ -30,6 +32,7 @@
     <link rel="stylesheet" href="/css/propertyTable.css" />
     <link rel="stylesheet" href="/css/propertyDetails.css" />
     <link rel="stylesheet" href="/css/calendar.css" />
+    <link rel="stylesheet" href="/css/reports.css" />
     <link rel="stylesheet" href="/css/propertyLookup.css" />
 
     <!-- JAVASCRIPT INCLUDES -->
@@ -58,6 +61,7 @@
     <script src="/js/hh.propertyDetails.js"></script>
     <script src="/js/hh.propertyLookup.js"></script>
     <script src="/js/hh.calendar.js"></script>
+    <script src="/js/hh.reports.js"></script>
 
     <!-- Custom scripts -->
     <script src="/js/secure.js"></script>
@@ -70,12 +74,12 @@
   <nav id="sidebarMenu" class="collapse d-lg-block sidebar collapse bg-white">
     <div class="position-sticky">
       <div class="list-group list-group-flush mx-3 mt-4">
-        <a href="#" class="list-group-item list-group-item-action py-2 ripple active" aria-current="true"><i class="fas fa-tachometer-alt fa-fw me-3"></i><span>Main dashboard</span></a>
+        <!-- <a href="#" class="list-group-item list-group-item-action py-2 ripple active" aria-current="true"><i class="fas fa-tachometer-alt fa-fw me-3"></i><span>Main dashboard</span></a> -->
         <a href="#" class="list-group-item list-group-item-action py-2 ripple" aria-current="true"><i class="fas fa-building fa-fw me-3"></i><span>My Properties</span></a>
         <a href="#" class="list-group-item list-group-item-action py-2 ripple"><i class="fas fa-chart-area fa-fw me-3"></i><span>Reports</span></a>
         <a href="#" class="list-group-item list-group-item-action py-2 ripple"><i class="fas fa-calendar fa-fw me-3"></i><span>Calendar</span></a>
         <a href="#" class="list-group-item list-group-item-action py-2 ripple"><i class="fas fa-users fa-fw me-3"></i><span>Contacts</span></a>
-        <a href="#" class="list-group-item list-group-item-action py-2 ripple"><i class="fas fa-briefcase fa-fw me-3"></i><span>Work Orders</span></a>
+        <a href="#" class="list-group-item list-group-item-action py-2 ripple"><i class="fas fa-ticket fa-fw me-3"></i><span>Work Orders</span></a>
       </div>
     </div>
   </nav>
@@ -242,7 +246,7 @@
 
 <!--Main layout-->
 <main style="margin-top: 38px">
-  <div class="container pt-4">
+  <div class="container-fluid pt-4">
     <div id="divMainContent" style="padding-top:12px;"></div>
 <!-- 
     <div id="addyLookup" style="display:hidden;">
