--- a/HomeHistory.Web/wwwroot/ui/reports.htm
+++ b/HomeHistory.Web/wwwroot/ui/reports.htm
@@ -4,7 +4,7 @@
 
         <div class="row">
 
-            <div class="col-md-3">
+            <div class="col-md-2">
 
                 <action-list>
                     <nav aria-label=" User settings" data-view-component="true" class="NavigationList">
@@ -22,11 +22,11 @@
                                         class="ActionList-item org-menu-item">
                                         <a href="#BP" tabindex="0" data-view-component="true"
                                             class="ActionList-content ActionList-content--visual16">
-                                            <span class="ActionList-item-visual ActionList-item-visual--leading">
+                                            <span class="ActionList-item-visual ActionList-item-visual--leading chart-bar">
                                                 <i class="fas fa-building fa-fw"></i>
                                             </span>
-                                            <span class="ActionList-item-label">
-                                                Report A
+                                            <span class="ActionList-item-label chart-bar">
+                                                Bar Chart
                                             </span>
                                         </a>
                                     </li>
@@ -34,11 +34,11 @@
                                         class="ActionList-item org-menu-item">
                                         <a href="#BP" tabindex="0" data-view-component="true"
                                             class="ActionList-content ActionList-content--visual16">
-                                            <span class="ActionList-item-visual ActionList-item-visual--leading">
+                                            <span class="ActionList-item-visual ActionList-item-visual--leading chart-pie">
                                                 <i class="fas fa-calendar fa-fw"></i>
                                             </span>
-                                            <span class="ActionList-item-label">
-                                                Report B
+                                            <span class="ActionList-item-label chart-pie">
+                                                Pie Chart
                                             </span>
                                         </a>
                                     </li>
@@ -57,11 +57,11 @@
                                         class="ActionList-item org-menu-item">
                                         <a href="#BP" tabindex="0" data-view-component="true"
                                             class="ActionList-content ActionList-content--visual16">
-                                            <span class="ActionList-item-visual ActionList-item-visual--leading">
+                                            <span class="ActionList-item-visual ActionList-item-visual--leading chart-line">
                                                 <i class="fas fa-sign-hanging fa-fw"></i>
                                             </span>
-                                            <span class="ActionList-item-label">
-                                                Report C
+                                            <span class="ActionList-item-label chart-line">
+                                                Line Chart
                                             </span>
                                         </a>
                                     </li>
@@ -69,11 +69,11 @@
                                         class="ActionList-item org-menu-item">
                                         <a href="#BP" tabindex="0" data-view-component="true"
                                             class="ActionList-content ActionList-content--visual16">
-                                            <span class="ActionList-item-visual ActionList-item-visual--leading">
+                                            <span class="ActionList-item-visual ActionList-item-visual--leading chart-gantt">
                                                 <i class="fas fa-filter-circle-dollar fa-fw"></i>
                                             </span>
-                                            <span class="ActionList-item-label">
-                                                Report D
+                                            <span class="ActionList-item-label chart-gantt">
+                                                Gantt Chart
                                             </span>
                                         </a>
                                     </li>
@@ -120,8 +120,8 @@
 
             </div>
 
-            <div class="col-md-9">
-                REPORT HERE
+            <div class="col-md-10">
+                <div id="divReport">
             </div>
 
         </div>
