--- a/HomeHistory.Web/wwwroot/ui/propertyDetails.htm
+++ b/HomeHistory.Web/wwwroot/ui/propertyDetails.htm
@@ -4,7 +4,7 @@
 
         <div class="row">
 
-            <div class="col-md-3">
+            <div class="col-md-2">
 
                 <action-list>
                     <nav aria-label=" User settings" data-view-component="true" class="NavigationList">
@@ -155,8 +155,8 @@
 
             </div>
 
-            <div class="col-md-9">
-                PROPERTY INFO HERE
+            <div class="col-md-10">
+                <div id="divPropertyInfo">
             </div>
 
         </div>
