--- a/HomeHistory.Web/wwwroot/ui/reports.htm
+++ b/HomeHistory.Web/wwwroot/ui/reports.htm
@@ -72,8 +72,8 @@
                                             <span class="ActionList-item-visual ActionList-item-visual--leading chart-gantt">
                                                 <i class="fas fa-filter-circle-dollar fa-fw"></i>
                                             </span>
-                                            <span class="ActionList-item-label chart-gantt">
-                                                Gantt Chart
+                                            <span class="ActionList-item-label chart-area">
+                                                Area Chart
                                             </span>
                                         </a>
                                     </li>
@@ -95,8 +95,8 @@
                                             <span class="ActionList-item-visual ActionList-item-visual--leading">
                                                 <i class="fas fa-ticket fa-fw"></i>
                                             </span>
-                                            <span class="ActionList-item-label">
-                                                Report E
+                                            <span class="ActionList-item-label chart-gantt">
+                                                Gantt Chart
                                             </span>
                                         </a>
                                     </li>
@@ -107,8 +107,8 @@
                                             <span class="ActionList-item-visual ActionList-item-visual--leading">
                                                 <i class="fas fa-receipt fa-fw"></i>
                                             </span>
-                                            <span class="ActionList-item-label">
-                                                Report F
+                                            <span class="ActionList-item-label chart-scatter">
+                                                Scatter Chart
                                             </span>
                                         </a>
                                     </li>
@@ -120,7 +120,7 @@
 
             </div>
 
-            <div class="col-md-10">
+            <div class="col-md-10" style="padding-top:20px;">
                 <div id="divReport">
             </div>
 
