--- a/HomeHistory.Web/wwwroot/ui/calendar.htm
+++ b/HomeHistory.Web/wwwroot/ui/calendar.htm
@@ -1,6 +1,6 @@
 <div class="hh-calendar">
     
-    <script src="/data/tasks.js"></script>
+    <!-- <script src="/data/tasks.js"></script> -->
 
     <div id="hhCalendar" class="hh-calendar-widget"></div>
 
