Stubbed out property details

--- a/HomeHistory.Web/wwwroot/ui/propertyDetails.htm
+++ b/HomeHistory.Web/wwwroot/ui/propertyDetails.htm
@@ -21,7 +21,7 @@
                                     <li data-item-id="" data-view-component="true"
                                         class="ActionList-item org-menu-item">
                                         <a href="#BP" tabindex="0" data-view-component="true"
-                                            class="ActionList-content ActionList-content--visual16">
+                                            class="ActionList-content ActionList-content--visual16 detail-overview">
                                             <span class="ActionList-item-visual ActionList-item-visual--leading">
                                                 <i class="fas fa-building fa-fw"></i>
                                             </span>
@@ -33,7 +33,7 @@
                                     <li data-item-id="" data-view-component="true"
                                         class="ActionList-item org-menu-item">
                                         <a href="#BP" tabindex="0" data-view-component="true"
-                                            class="ActionList-content ActionList-content--visual16">
+                                            class="ActionList-content ActionList-content--visual16 detail-schedule">
                                             <span class="ActionList-item-visual ActionList-item-visual--leading">
                                                 <i class="fas fa-calendar fa-fw"></i>
                                             </span>
@@ -42,45 +42,10 @@
                                             </span>
                                         </a>
                                     </li>
-                                </ul>
-                            </li>
-                            <li class="ActionList-sectionDivider"></li>
-                            <li id="nav-list-section-092978e5-594c-497a-ab7e-731494460b65" aria-hidden="true"
-                                data-view-component="true" class="ActionList-sectionDivider">
-                                Tentant Mgmt
-                            </li>
-                            <li data-view-component="true" class="ActionList-item ActionList-item--hasSubItem">
-                                <ul aria-label="Code, planning and automation"
-                                    aria-labelledby="nav-list-section-092978e5-594c-497a-ab7e-731494460b65"
-                                    data-view-component="true" class="ActionList ActionList--subGroup">
                                     <li data-item-id="" data-view-component="true"
                                         class="ActionList-item org-menu-item">
                                         <a href="#BP" tabindex="0" data-view-component="true"
-                                            class="ActionList-content ActionList-content--visual16">
-                                            <span class="ActionList-item-visual ActionList-item-visual--leading">
-                                                <i class="fas fa-sign-hanging fa-fw"></i>
-                                            </span>
-                                            <span class="ActionList-item-label">
-                                                Advertising
-                                            </span>
-                                        </a>
-                                    </li>
-                                    <li data-item-id="" data-view-component="true"
-                                        class="ActionList-item org-menu-item">
-                                        <a href="#BP" tabindex="0" data-view-component="true"
-                                            class="ActionList-content ActionList-content--visual16">
-                                            <span class="ActionList-item-visual ActionList-item-visual--leading">
-                                                <i class="fas fa-filter-circle-dollar fa-fw"></i>
-                                            </span>
-                                            <span class="ActionList-item-label">
-                                                Screening
-                                            </span>
-                                        </a>
-                                    </li>
-                                    <li data-item-id="" data-view-component="true"
-                                        class="ActionList-item org-menu-item">
-                                        <a href="#BP" tabindex="0" data-view-component="true"
-                                            class="ActionList-content ActionList-content--visual16">
+                                            class="ActionList-content ActionList-content--visual16 detail-rent">
                                             <span class="ActionList-item-visual ActionList-item-visual--leading">
                                                 <i class="fas fa-file-invoice-dollar fa-fw"></i>
                                             </span>
@@ -103,7 +68,7 @@
                                     <li data-item-id="" data-view-component="true"
                                         class="ActionList-item org-menu-item">
                                         <a href="#BP" tabindex="0" data-view-component="true"
-                                            class="ActionList-content ActionList-content--visual16">
+                                            class="ActionList-content ActionList-content--visual16 detail-work-orders">
                                             <span class="ActionList-item-visual ActionList-item-visual--leading">
                                                 <i class="fas fa-ticket fa-fw"></i>
                                             </span>
@@ -115,7 +80,7 @@
                                     <li data-item-id="" data-view-component="true"
                                         class="ActionList-item org-menu-item">
                                         <a href="#BP" tabindex="0" data-view-component="true"
-                                            class="ActionList-content ActionList-content--visual16">
+                                            class="ActionList-content ActionList-content--visual16 detail-receipts">
                                             <span class="ActionList-item-visual ActionList-item-visual--leading">
                                                 <i class="fas fa-receipt fa-fw"></i>
                                             </span>
@@ -138,7 +103,7 @@
                                     <li data-item-id="" data-view-component="true"
                                         class="ActionList-item org-menu-item">
                                         <a href="#BP" tabindex="0" data-view-component="true"
-                                            class="ActionList-content ActionList-content--visual16">
+                                            class="ActionList-content ActionList-content--visual16 detail-tenant-portal">
                                             <span class="ActionList-item-visual ActionList-item-visual--leading">
                                                 <i class="fas fa-key fa-fw"></i>
                                             </span>
