--- a/HomeHistory.Web/wwwroot/ui/reports.htm
+++ b/HomeHistory.Web/wwwroot/ui/reports.htm
@@ -121,7 +121,7 @@
             </div>
 
             <div class="col-md-10" style="padding-top:20px;">
-                <div id="divReport">
+                <div id="divReport" style="height: 600px;">
             </div>
 
         </div>
