Property detail updates - overview & calendar

--- a/HomeHistory.Web/wwwroot/ui/propertyDetails.htm
+++ b/HomeHistory.Web/wwwroot/ui/propertyDetails.htm
@@ -33,12 +33,12 @@
                                     <li data-item-id="" data-view-component="true"
                                         class="ActionList-item org-menu-item">
                                         <a href="#BP" tabindex="0" data-view-component="true"
-                                            class="ActionList-content ActionList-content--visual16 detail-schedule">
+                                            class="ActionList-content ActionList-content--visual16 detail-calendar">
                                             <span class="ActionList-item-visual ActionList-item-visual--leading">
                                                 <i class="fas fa-calendar fa-fw"></i>
                                             </span>
                                             <span class="ActionList-item-label">
-                                                Schedule
+                                                Calendar
                                             </span>
                                         </a>
                                     </li>
@@ -121,11 +121,45 @@
             </div>
 
             <div class="col-md-10">
-                <div id="divPropertyInfo">
+                <div id="divPropertyInfo" style="padding-top:20px;">
+                </div>
+
             </div>
 
         </div>
 
     </div>
 
+</div>
+<div style="display:none;">
+    <div id="propOverview">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-4">
+                    <div class="formatted-address" style="white-space:pre-wrap;"></div>
+                </div>
+                <div class="col-4">
+                    Col 2
+                </div>
+                <div class="col-4">
+                    Col 3
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="propCalendar">
+        <div id="divPropCalendar"></div>
+    </div>
+    <div id="propRent">
+        Rent
+    </div>
+    <div id="propWorkOrders">
+        Work Orders
+    </div>
+    <div id="propReceipts">
+        Receipts
+    </div>
+    <div id="propTenantPortal">
+        Tenant Portal
+    </div>
 </div>
