--- a/HomeHistory.Web/wwwroot/secure.htm
+++ b/HomeHistory.Web/wwwroot/secure.htm
@@ -34,6 +34,7 @@
     <link rel="stylesheet" href="/css/calendar.css" />
     <link rel="stylesheet" href="/css/reports.css" />
     <link rel="stylesheet" href="/css/propertyLookup.css" />
+    <link rel="stylesheet" href="/css/contacts.css" />
 
     <!-- JAVASCRIPT INCLUDES -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -62,6 +63,7 @@
     <script src="/js/hh.propertyLookup.js"></script>
     <script src="/js/hh.calendar.js"></script>
     <script src="/js/hh.reports.js"></script>
+    <script src="/js/hh.contacts.js"></script>
 
     <!-- Custom scripts -->
     <script src="/js/secure.js"></script>
